Email notification implemented

--- a/ama_content/payment_confirmation.html
+++ b/ama_content/payment_confirmation.html
@@ -114,7 +114,7 @@
                     </tr>
                     <tr>
                         <td>AM ID</td>
-                        <td class="ama_id" ="ama_id_en"></td>
+                        <td class="ama_id" id="ama_id_en"></td>
                     </tr>
                     <tr>
                         <td>Message</td>
